openshift/sidecar/spring-dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"spring-dex:latest","namespace":"test"},"fieldPath":"spec.template.spec.containers[?(@.name==\"spring-dex\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2024-11-27T14:57:12Z"
  generation: 2
  labels:
    app: spring-dex
    app.kubernetes.io/component: spring-dex
    app.kubernetes.io/instance: spring-dex
  name: spring-dex
  namespace: test
  resourceVersion: "623789611"
  uid: c43926a2-e616-4e45-8428-4b1d00f5c8b1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: spring-dex
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: spring-dex
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/test/spring-dex@sha256:389a81908bf984edb275fb71d2f76f9c61d3e16ac252b64a94bedcc165dcf139
        imagePullPolicy: IfNotPresent
        name: spring-dex
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-11-27T14:57:12Z"
    lastUpdateTime: "2024-11-27T14:57:27Z"
    message: ReplicaSet "spring-dex-6bbdfd887" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-11-27T14:59:58Z"
    lastUpdateTime: "2024-11-27T14:59:58Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
